# OpenDashboardIdl

./: CMakeLists.txt  open_dashboard.proto
